<resources>

    <string name="base_url">http://77.55.216.17:8080/</string>

    <string name="app_name">BEZPIECZNE DZIECKO</string>

    <string name="welcome_btn_parent">ZALOGUJ RODZICA</string>
    <string name="welcome_btn_child">ZALOGUJ DZIECKO</string>
    <string name="welcome_btn_register">UTWÓRZ KONTO</string>

    <string name="parent_login_header1">LOGOWANIE RODZICA</string>
    <string name="parent_login_hint_login">Nazwa użytkownika</string>
    <string name="parent_login_hint_password">Hasło użytkownika</string>
    <string name="parent_login_btn_login">ZALOGUJ</string>
    <string name="parent_login_btn_back">COFNIJ</string>

    <string name="child_login_header1">LOGOWANIE DZIECKA</string>
    <string name="child_login_hint_login">Nazwa użytkownika</string>
    <string name="child_login_hint_password">Hasło użytkownika</string>
    <string name="child_login_btn_login">ZALOGUJ</string>
    <string name="child_login_btn_back">COFNIJ</string>

    <string name="child_logout_hint_password">Hasło rodzica</string>


    <string name="parent_register_header1">REJESTRACJA RODZICA</string>
    <string name="parent_register_hint_login">Nazwa użytkownika</string>
    <string name="parent_register_hint_password">Hasło</string>
    <string name="parent_register_hint_first_name">Imię</string>
    <string name="parent_register_hint_last_name">Nazwisko</string>
    <string name="parent_register_hint_email">EMail</string>
    <string name="parent_register_hint_phone_number">Numer telefonu</string>
    <string name="parent_register_hint_pesel">Numer PESEL</string>

    <string name="parent_register_hint_gender_male">Mężczyzna</string>
    <string name="parent_register_hint_gender_female">Kobieta</string>
    <string name="parent_register_hint_gender_no">Nie podam</string>
    <string name="parent_register_hint_gender">Płeć:</string>

    <string name="parent_register_hint_adress">Adres zamieszkania</string>
    <string name="parent_register_hint_postal_code">Kod pocztowy</string>
    <string name="parent_register_hint_city">Miasto</string>
    <string name="parent_register_hint_country">Kraj</string>

    <string name="parent_register_btn_register">ZAREJESTRUJ</string>
    <string name="parent_register_btn_back">COFNIJ</string>

    <string name="child_register_header1">REJESTRACJA DZIECKA</string>
    <string name="child_register_hint_login">Nazwa użytkownika</string>
    <string name="child_register_hint_password">Hasło</string>
    <string name="child_register_hint_first_name">Imię</string>
    <string name="child_register_hint_last_name">Nazwisko</string>
    <string name="child_register_hint_email">EMail</string>
    <string name="child_register_hint_phone_number">Numer telefonu</string>
    <string name="child_register_hint_pesel">Numer PESEL</string>

    <string name="child_register_hint_gender_male">Mężczyzna</string>
    <string name="child_register_hint_gender_female">Kobieta</string>
    <string name="child_register_hint_gender_no">Nie podam</string>
    <string name="child_register_hint_gender">Płeć:</string>

    <string name="child_register_btn_register">ZAREJESTRUJ</string>
    <string name="child_register_btn_back">COFNIJ</string>

    <string name="parent_main_btn_maps">MAPA</string>
    <string name="parent_main_btn_children">DZIECI</string>
    <string name="parent_main_btn_schedules">HARMONOGRAMY</string>
    <string name="parent_main_btn_logout">WYLOGUJ</string>

    <string name="child_main_btn_maps">MAPA</string>
    <string name="child_main_btn_children">DZIECI</string>
    <string name="child_main_btn_schedules">HARMONOGRAMY</string>
    <string name="child_main_btn_logout">WYLOGUJ</string>

    <string name="child_map_btn_back">COFNIJ</string>

    <string name="parent_map_btn_back">COFNIJ</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
    functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="title_activity_maps">Map</string>


    <string name="location_token">N5Ol1anRFPtJLbS1GEZGPYfG7s7E1DHe9VZBvMSB1MLdn3Ft84Ansgu0824z5cdE</string>
    <string name="parent_token">3rcc4zyKsMBESXQGtKbVrv1Za8l3CwB5ndIRdG25S3aarrhkCSGtO8SoGERIATen</string>
    <string name="child_token">GgV6r7hErAKK8ln7muz71FtM2sdI4yGaf2H6zpbrplBY6pvTjvqKAkW3cAbGyhhe</string>
    <string name="schedule_token">WBLGQ1u9bOVoVRM3XWLYmGg2iuUXTlGgnSmDjgdVvyJQPWkdjwC6CiykdTIwEPcr</string>
    <string name="alarm">ALARM</string>
    <string name="shared_preferences">BezpieczneDziecko</string>
    <string name="shared_preferences_logged">logged</string>
    <string name="shared_preferences_login">login</string>
    <string name="shared_preferences_first_name">first_name</string>
    <string name="shared_preferences_last_name">last_name</string>
    <string name="shared_preferences_child_login">child_login</string>
    <string name="shared_preferences_child_first_name">child_first_name</string>
    <string name="shared_preferences_child_last_name">child_last_name</string>
    <string name="shared_preferences_logged_child">child</string>
    <string name="shared_preferences_longitude">longitude</string>
    <string name="shared_preferences_latitude">latitude</string>
    <string name="shared_preferences_logged_parent">parent</string>
    <string name="shared_preferences_logged_nobody">nobody</string>

    <string name="child_edit_label_header">EDYTUJ DZIECKO</string>
    <string name="child_edit_label_login">Nazwa użytkownika:</string>
    <string name="child_edit_label_new_password">Nowe hasło:</string>
    <string name="child_edit_label_first_name">Imię:</string>
    <string name="child_edit_label_last_name">Nazwisko:</string>
    <string name="child_edit_label_email">EMail:</string>
    <string name="child_edit_label_phone_number">Numer telefonu:</string>
    <string name="child_edit_label_pesel">Numer PESEL:</string>
    <string name="child_edit_label_savebutton">ZAPISZ</string>
    <string name="child_edit_confirm_header">Potwierdzenie zmiany hasła</string>
    <string name="child_edit_confirm_explanation">W celu zmiany hasla, wymagana jest weryfikacja. \nProszę wprowadzić aktualne hasło:</string>
    <string name="child_edit_confirm_confirmButton">Potwierdź</string>
    <string name="child_edit_confirm_cancelButton">Anuluj</string>

    <string name="parent_main_btn_edit">EDYTUJ</string>
    <string name="parent_edit_label_header">EDYTUJ RODZICA</string>
    <string name="parent_edit_label_login">Nazwa użytkownika:</string>
    <string name="parent_edit_label_new_password">Nowe hasło:</string>
    <string name="parent_edit_label_first_name">Imię:</string>
    <string name="parent_edit_label_last_name">Nazwisko:</string>
    <string name="parent_edit_label_email">EMail:</string>
    <string name="parent_edit_label_phone_number">Numer telefonu:</string>
    <string name="parent_edit_label_pesel">Numer PESEL:</string>
    <string name="parent_edit_label_address">Adres:</string>
    <string name="parent_edit_label_postal_code">Kod pocztowy:</string>
    <string name="parent_edit_label_city">Miejscowość:</string>
    <string name="parent_edit_label_country">Kraj:</string>
    <string name="parent_edit_label_account_type">Typ konta:</string>
    <string name="parent_edit_btn_buy_premium">Wykup wersję premium</string>
    <string name="parent_edit_label_savebutton">ZAPISZ</string>
    <string name="parent_edit_confirm_header">Potwierdzenie zmiany hasła</string>
    <string name="parent_edit_confirm_explanation">W celu zmiany hasla, wymagana jest weryfikacja. \nProszę wprowadzić aktualne hasło:</string>
    <string name="parent_edit_confirm_confirmButton">Potwierdź</string>
    <string name="parent_edit_confirm_cancelButton">Anuluj</string>
    <string name="parent_register_hint_account_type">Typ</string>
    <string name="parent_main_btn_delete">USUŃ</string>
    <string name="parent_delete_confirm_header">Potwierdzenie usunięcia konta rodzica</string>
    <string name="parent_delete_confirm_explanation">UWAGA! Wraz z kontem rodzica zostaną usunięte przypisane konta dzieci. Aby kontynuować, wprowadź aktualne hasło:</string>
    <string name="title_activity_parent_schedule_add_map">Map</string>
    <string name="description">description</string>
    <string name="schedule_start">Obowiązuje od</string>
    <string name="schedule_stop">Obowiązuje do</string>
    <string name="longitude">Długość geograficzna</string>
    <string name="latitude">Szerokość geograficzna</string>
    <string name="schedule_radius">Dozwolony obszar</string>
    <string name="btn_edit">EDYTUJ</string>
    <string name="btn_delete">USUŃ</string>


</resources>