<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_register_header1"
        android:textSize="30sp"
        android:textAlignment="center"
        android:elegantTextHeight="true"
        android:textColor="@color/design_default_color_primary"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/edt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="20sp"
        android:hint="@string/child_register_hint_login"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_register_hint_password"
        android:inputType="textPassword"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/child_register_hint_first_name"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/child_register_hint_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_register_hint_email"
        android:inputType="textEmailAddress"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_register_hint_phone_number"
        android:inputType="phone"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edt_pesel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_register_hint_pesel"
        android:inputType="number"
        android:textSize="15sp" />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child_register_hint_gender"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/radio_male"
            android:text="@string/child_register_hint_gender_male"/>
        <RadioButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/radio_female"
            android:text="@string/child_register_hint_gender_female"/>
        <RadioButton
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/radio_no"
            android:text="@string/child_register_hint_gender_no"/>
    </LinearLayout>







    <Button
        android:id="@+id/btn_register"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:textSize="18sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:text="@string/child_register_btn_register" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginLeft="40sp"
        android:text="@string/child_register_btn_back"
        android:textSize="18sp" />

</LinearLayout>