<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".welcome">


    <Button
        android:id="@+id/btn_parent"
        android:text="@string/welcome_btn_parent"
        android:layout_width="300sp"
        android:layout_marginTop="20sp"
        android:layout_height="150sp"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_child"
        android:text="@string/welcome_btn_child"
        android:layout_width="300sp"
        android:layout_marginTop="20sp"
        android:layout_height="150sp"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/welcome_btn_register"
        android:layout_width="300sp"
        android:layout_marginTop="20sp"
        android:layout_height="150sp"
        android:textSize="35sp" />

</LinearLayout>