<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/child_logout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context=".authorization.childLogout">

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="30sp"
        android:hint="@string/child_logout_hint_password"
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:textSize="20sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="25sp"
        android:text="@string/child_main_btn_logout" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:textSize="20sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="5sp"
        android:text="@string/child_login_btn_back" />




</LinearLayout>


